--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
 		"svelte": "^3.54.0",
+		"tailwindcss": "^3.3.1",
 		"vite": "^4.2.0"
 	},
 	"type": "module"
