--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"postinstall": "wget -O src/lib/index.json http://data.chronicle.ethevents.club/index.json"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
