--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
+		"date-fns": "^2.29.3",
 		"postcss": "^8.4.21",
 		"svelte": "^3.54.0",
 		"tailwindcss": "^3.3.1",
